2005-11-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	Implement some new methods defined in ITextBuffer and IEditor.

2005-10-28 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	add FormatLine to give us better smart indenting
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	use FormatLine on enter instead of indentline
	
2005-10-28 John Luke <john.luke@gmail.com> 

	* EditorBindings.glade: add smart indent radio button
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs:
	indent through the formatter, instead of gtksourceview
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
	load the formatters from the addin file per language
	* MonoDevelop.SourceEditor.Properties/TextEditorProperties.cs:
	add a FIXME comment
	* MonoDevelop.SourceEditor.Gui.OptionPanels/BehaviorTextEditorPanel.cs:
	load/store smart indent settings
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	add return for indentation handling
	* MonoDevelop.SourceEditor.addin.xml: add Return EditAction
	
2005-10-28 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs (DeleteLine):
	rework to delete the whole line, not just erase its contents
	
2005-10-28 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs (PeekCharIsWhitespace):
	fix GTK+ assertion when the next char is a new line by
	using Offset instead of LineOffset
	
2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Actions/EditActionCollection.cs:
	filter out problematic Masks, so far just LockMask and Mod2Mask

2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.addin.xml: fix space
	* MonoDevelop.SourceEditor.Actions/DefaultEditActions.cs:
	fix completion for space key presses

2005-10-23 John Luke <john.luke@gmail.com> 

	* MonoDevelop.SourceEditor.Actions/IEditAction.cs: