@@ -1,3 +1,9 @@
+2005-11-09  Lluis Sanchez Gual  <lluis@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
+	In InitializeFormatter don't crash for files without extension.
+	Implement some new methods defined in ITextBuffer and IEditor.
+
 2005-11-04  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs:
